# rag_project

./: .gitignore  main.py  pyproject.toml  requirements.txt  template.py
src/: chains.py  config.py  helper_functions.py  pdf_reader.py  retriever.py
tests/: test_pydantic_basics.py
